@@ -51,3 +51,39 @@ function build_radio_options($options, $form_data, $form_key, $required=false){
 	}
 	return $output;
 }
+
+function build_contact_section($form_data, $atts){
+	$output = <<< RENDERSECTION
+<fieldset>
+	<h3>{$atts['contact_section_title']}</h3>
+	<div class="row">
+		<div class="col-xs-12 col-md-6">
+			<div class="form-group">
+				<label for="contact_name">{$atts['label_contact_name']}</label> <input
+					type="text" class="form-control" id="contact_name"
+					name="contact_name" placeholder="Full Name" value="{$form_data['contact_name']}" required>
+			</div>
+		</div>
+		<div class="col-xs-12 col-md-6">
+			<div class="form-group">
+				<label for="contact_email">{$atts['label_contact_email']}</label> <input
+					type="email" required class="form-control" id="contact_email"
+					name="contact_email" placeholder="Email Address" value="{$form_data['contact_email']}" required>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-md-6">
+			<div class="form-group">
+				<label for="contact_mobile">{$atts['label_contact_mobile']}</label> <input
+					type="text" class="form-control" id="contact_mobile"
+					name="contact_mobile" placeholder="Mobile Number" value="{$form_data['contact_mobile']}">
+			</div>
+		</div>
+
+	</div>
+</fieldset>	
+RENDERSECTION;
+	
+	return $output;
+}
