@@ -1,18 +1,28 @@
 <?php
 function build_mvi_segment($form_data, $atts){
-	$output = "";
-
-	$output .= "<div>";
-	$output .= "	<label for='mvi_type'>" . $atts['label_mvi_type'] . "</label>";
-	$output .= "	<select name='mvi_type' id='mvi_type'>";
-	$output .= build_mvi_options($form_data, $atts);
-	$output .= "	</select>";
-	$output .= "</div>";
-	$output .= "<div>";
-	$output .= "	<label for='mvi_value'>" . $atts['label_mvi_value'] . "</label>";
-	$output .= "	<input type='number' name='mvi_value' id='mvi_value' placeholder='Value of vehicle for comprehensive insurance. Must be at least N1M.' min='1000000' step='100000' size='8' value='{$form_data['mvi_value']}'/>";
-	$output .= "</div>";
-
+	$build_mvi_options = 'build_mvi_options';
+	$output = <<< RENDERFORM
+<div class="row">
+	<div class="col-xs-12 col-md-7">
+		<div class="form-group">
+			<label for='mvi_type'>  {$atts['label_mvi_type']} </label>
+			<select name='mvi_type' id='mvi_type' class="form-control">
+				{$build_mvi_options($form_data, $atts)}
+			</select>
+		</div>
+	</div>
+	<div class="col-xs-12 col-md-5">
+		<div class="form-group">
+			<label for='mvi_value'> {$atts['label_mvi_value']} </label>
+			<div class="input-group">
+				<div class="input-group-addon">&#8358;</div>
+					<input type='number' class="form-control" name='mvi_value' id='mvi_value' placeholder='Min 500,000' min='500000' step='100000' size='8' value='{$form_data['mvi_value']}'/
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+RENDERFORM;
 	return $output;
 }
 
